--- a/client/src/home-page/Home.css
+++ b/client/src/home-page/Home.css
@@ -1,6 +1,7 @@
 .TitlePage {
-  background-color: #f08d7e;
-  display: flexbox;
+  background-color: #efa18a;
+  justify-content: center;
+  display: flex;
   height: 90%;
   width: 100%;
   position: absolute;
@@ -10,6 +11,7 @@
 .Title {
   padding-top: 20%;
   color: white;
+  text-align: center;
 }
 
 .nav-links {
@@ -21,7 +23,7 @@
 
 .nav-bar {
   display: flex;
-  background-color: #dda6b9;
+  background-color: #f08d7e;
   height: 100%;
   justify-content: center;
 }
@@ -32,4 +34,15 @@
   left: 0;
   bottom: 0;
   right: 0;
+}
+
+.modes {
+  background-color: #e2bab1;
+  justify-content: center;
+  display: flex;
+  height: 40%;
+  width: 100%;
+  margin-top: 30%;
+  position: fixed;
+  font-size: 1.2rem;
 }
