--- a/client/src/home-page/Home.css
+++ b/client/src/home-page/Home.css
@@ -1,7 +1,6 @@
 .TitlePage {
   background-color: #efa18a;
   justify-content: center;
-  display: flex;
   height: 90%;
   width: 100%;
   position: absolute;
@@ -18,14 +17,14 @@
   color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 0.5rem 1rem;
-  justify-content: center;
 }
 
 .nav-bar {
-  display: flex;
   background-color: #f08d7e;
   height: 100%;
-  justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: right;
 }
 
 .bottom {
@@ -45,4 +44,10 @@
   margin-top: 30%;
   position: fixed;
   font-size: 1.2rem;
+}
+
+.Descrip {
+  color: white;
+  text-align: center;
+  padding-top: 10rem;
 }
