--- a/client/src/css/textarea.css
+++ b/client/src/css/textarea.css
@@ -1,41 +1,12 @@
-$primary: #f08d7e;
+$primary: #11998e;
 $secondary: #38ef7d;
 $white: #fff;
 $gray: #9b9b9b;
-.something {
-  background-color: #f08d7e;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
-.current {
-  padding-top: 43%;
-}
-
-.bottom-of-page {
-  position: absolute;
-  background-color: #acaec5;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-
-.back-to-home {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-}
-
 .form__group {
   position: relative;
   padding: 15px 0 0;
   margin-top: 10px;
-  margin:auto;
   width: 50%;
-  justify-content: center;
 }
 
 .form__field {
@@ -49,9 +20,7 @@ $gray: #9b9b9b;
   padding: 7px 0;
   background: transparent;
   transition: border-color 0.2s;
-  resize:none;
-  overflow:hidden;
-  height:25px;
+
   &::placeholder {
     color: transparent;
   }
@@ -91,4 +60,15 @@ $gray: #9b9b9b;
 /* reset input */
 .form__field{
   &:required,&:invalid { box-shadow:none; }
+}
+/* demo */
+body {
+  font-family: 'Poppins', sans-serif; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-size: 1.5rem;
+  background-color:#222222;
 }
