--- a/client/src/home-page/Home.css
+++ b/client/src/home-page/Home.css
@@ -11,6 +11,7 @@
   padding-top: 20%;
   color: black;
   text-align: center;
+  justify-content: center;
 }
 
 .nav-links {
@@ -44,4 +45,6 @@
   text-align: center;
   padding-top: 10rem;
   font-weight:500;
+  width:50%;
+  margin:auto
 }
