--- a/client/src/home-page/navbar.css
+++ b/client/src/home-page/navbar.css
@@ -9,3 +9,12 @@
     padding:0.5rem 1.5rem;
     text-decoration: none;
 }
+.our-title {
+    position:absolute;
+    top:5px;
+    left:5px;
+    font-family:'Courier New', Courier, monospace;
+    font-weight:500;
+    font-size:40px
+
+}
